Add reconnecting to WS client and basic parsing